--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -7,12 +7,13 @@
 .Track-action {
   cursor: pointer;
   padding: .5rem;
-  font-size: 1.05rem;
+  font-size: 2.0rem;
   transition: color .25s;
+  text-decoration: none;
 }
 
 .Track-action:hover {
-  color: rgba(265, 265, 265, .5);
+  color: green;
 }
 
 .Track-information {
@@ -32,4 +33,3 @@
   font-weight: 300;
   color: rgba(256, 256, 256, 0.8);
 }
-
